--- a/RR_Project_1.Rmd
+++ b/RR_Project_1.Rmd
@@ -2,7 +2,9 @@
 title: "Reproducible Research Project 1"
 author: "Weilun Chiu"
 date: "8/14/2020"
-output: html_document
+output: 
+  html_document:
+keep_md: true
 ---
 
 Before we start answering the questions in this project, we need to first read the data set into R. And since the date is character class, we can uss as.Date function from pacakge lubridate to make it "Date" class.
